--- a/page-videos.html
+++ b/page-videos.html
@@ -63,6 +63,10 @@
                           type="video/mp4" />
                       </video>
 
+                      <div class="card-date-overlay">
+                        <span class="video-date">11.05.2025</span>
+                      </div>
+
                       <div class="card-bottom p-3 pb-2">
                         <h2 class="color-white">10m Sprint</h2>
                         <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
@@ -81,6 +85,10 @@
                         <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4"
                           type="video/mp4" />
                       </video>
+
+                      <div class="card-date-overlay">
+                        <span class="video-date">11.05.2025</span>
+                      </div>
 
                       <div class="card-bottom p-3 pb-2">
                         <h2 class="color-white">10m Sprint Pro</h2>
@@ -105,6 +113,10 @@
                           type="video/mp4" />
                       </video>
 
+                      <div class="card-date-overlay">
+                        <span class="video-date">11.05.2025</span>
+                      </div>
+
                       <div class="card-bottom p-3 pb-2">
                         <h2 class="color-white">20m Sprint</h2>
                         <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
@@ -125,6 +137,10 @@
                           type="video/mp4" />
                       </video>
 
+                      <div class="card-date-overlay">
+                        <span class="video-date">11.05.2025</span>
+                      </div>
+
                       <div class="card-bottom p-3 pb-2">
                         <h2 class="color-white">20m Sprint Elite</h2>
                         <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
@@ -144,6 +160,10 @@
                     <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4"
                       type="video/mp4" />
                   </video>
+
+                  <div class="card-date-overlay">
+                    <span class="video-date">11.05.2025</span>
+                  </div>
 
                   <div class="card-bottom p-3 pb-2">
                     <h2 class="color-white">Gewandtheit</h2>
@@ -168,6 +188,10 @@
                       type="video/mp4">
                   </video>
 
+                  <div class="card-date-overlay">
+                    <span class="video-date">11.05.2025</span>
+                  </div>
+
                   <div class="card-bottom p-3 pb-2">
                     <h2 class="color-white">Ballkontrolle</h2>
                     <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
@@ -190,6 +214,10 @@
                       type="video/mp4">
                   </video>
 
+                  <div class="card-date-overlay">
+                    <span class="video-date">11.05.2025</span>
+                  </div>
+
                   <div class="card-bottom p-3 pb-2">
                     <h2 class="color-white">Balljonglieren</h2>
                     <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
@@ -211,6 +239,10 @@
                     <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4"
                       type="video/mp4">
                   </video>
+
+                  <div class="card-date-overlay">
+                    <span class="video-date">11.05.2025</span>
+                  </div>
 
                   <div class="card-bottom p-3 pb-2">
                     <h2 class="color-white">Dribbling</h2>
@@ -249,9 +281,9 @@
                       </div>
                     </div>
                     <div class="ms-auto w-100">
-                      <h5 class="font-600 font-16 line-height-sm pt-1">10m Sprint</h5>
-                      <span class="d-block font-11 font-400 opacity-60">2.00 s</span>
-                      <h3 class="pt-2 mt-n1"><i class="fa fa-clock color-blue-dark pe-2"></i> 2.00 s</h3>
+                      <h5 class="font-600 font-16 line-height-sm pt-1 color-theme">10m Sprint</h5>
+                      <span class="d-block font-11 font-400 opacity-60 color-theme">2.00 s</span>
+                      <h3 class="pt-2 mt-n1 color-theme"><i class="fa fa-clock color-blue-dark pe-2"></i> 2.00 s</h3>
                     </div>
                   </a>
                   <div class="divider mt-3 mb-3"></div>
@@ -272,9 +304,9 @@
                       </div>
                     </div>
                     <div class="ms-auto w-100">
-                      <h5 class="font-600 font-16 line-height-sm pt-1">20m Sprint</h5>
-                      <span class="d-block font-11 font-400 opacity-60">3.59 s</span>
-                      <h3 class="pt-2 mt-n1"><i class="fa fa-clock color-blue-dark pe-2"></i> 3.59 s</h3>
+                      <h5 class="font-600 font-16 line-height-sm pt-1 color-theme">20m Sprint</h5>
+                      <span class="d-block font-11 font-400 opacity-60 color-theme">3.59 s</span>
+                      <h3 class="pt-2 mt-n1 color-theme"><i class="fa fa-clock color-blue-dark pe-2"></i> 3.59 s</h3>
                     </div>
                   </a>
                   <div class="divider mt-3 mb-3"></div>
@@ -295,9 +327,9 @@
                       </div>
                     </div>
                     <div class="ms-auto w-100">
-                      <h5 class="font-600 font-16 line-height-sm pt-1">Gewandtheit</h5>
-                      <span class="d-block font-11 font-400 opacity-60">7.81 s</span>
-                      <h3 class="pt-2 mt-n1"><i class="fa fa-clock color-blue-dark pe-2"></i> 7.81 s</h3>
+                      <h5 class="font-600 font-16 line-height-sm pt-1 color-theme">Gewandtheit</h5>
+                      <span class="d-block font-11 font-400 opacity-60 color-theme">7.81 s</span>
+                      <h3 class="pt-2 mt-n1 color-theme"><i class="fa fa-clock color-blue-dark pe-2"></i> 7.81 s</h3>
                     </div>
                   </a>
                   <div class="divider mt-3 mb-3"></div>
@@ -318,9 +350,9 @@
                       </div>
                     </div>
                     <div class="ms-auto w-100">
-                      <h5 class="font-600 font-16 line-height-sm pt-1">Ballkontrolle</h5>
-                      <span class="d-block font-11 font-400 opacity-60">10.82 s</span>
-                      <h3 class="pt-2 mt-n1"><i class="fa fa-clock color-blue-dark pe-2"></i> 10.82 s</h3>
+                      <h5 class="font-600 font-16 line-height-sm pt-1 color-theme">Ballkontrolle</h5>
+                      <span class="d-block font-11 font-400 opacity-60 color-theme">10.82 s</span>
+                      <h3 class="pt-2 mt-n1 color-theme"><i class="fa fa-clock color-blue-dark pe-2"></i> 10.82 s</h3>
                     </div>
                   </a>
                   <div class="divider mt-3 mb-3"></div>
@@ -341,9 +373,9 @@
                       </div>
                     </div>
                     <div class="ms-auto w-100">
-                      <h5 class="font-600 font-16 line-height-sm pt-1">Balljonglieren</h5>
-                      <span class="d-block font-11 font-400 opacity-60">0.00 P</span>
-                      <h3 class="pt-2 mt-n1"><i class="fa fa-star color-yellow-dark pe-2"></i> 0.00 P</h3>
+                      <h5 class="font-600 font-16 line-height-sm pt-1 color-theme">Balljonglieren</h5>
+                      <span class="d-block font-11 font-400 opacity-60 color-theme">0.00 P</span>
+                      <h3 class="pt-2 mt-n1 color-theme"><i class="fa fa-star color-yellow-dark pe-2"></i> 0.00 P</h3>
                     </div>
                   </a>
                   <div class="divider mt-3 mb-3"></div>
@@ -364,9 +396,9 @@
                       </div>
                     </div>
                     <div class="ms-auto w-100">
-                      <h5 class="font-600 font-16 line-height-sm pt-1">Dribbling</h5>
-                      <span class="d-block font-11 font-400 opacity-60">10.27 s</span>
-                      <h3 class="pt-2 mt-n1"><i class="fa fa-clock color-blue-dark pe-2"></i> 10.27 s</h3>
+                      <h5 class="font-600 font-16 line-height-sm pt-1 color-theme">Dribbling</h5>
+                      <span class="d-block font-11 font-400 opacity-60 color-theme">10.27 s</span>
+                      <h3 class="pt-2 mt-n1 color-theme"><i class="fa fa-clock color-blue-dark pe-2"></i> 10.27 s</h3>
                     </div>
                   </a>
                 </div>
@@ -382,18 +414,18 @@
                         style="background-image:url('images/fitness/5t.jpg')">
                         <!-- Remove card-top, move result under title -->
                       </div>
-                      <h5 class="font-600 font-16 line-height-sm pt-3">10m Sprint</h5>
-                      <span class="bg-yellow-light color-white p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">2.00 s</span>
-                      <p class="font-12 line-height-s">2.00 s</p>
+                      <h5 class="font-600 font-16 line-height-sm pt-3 color-theme">10m Sprint</h5>
+                      <span class="bg-yellow-light color-black p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">2.00 s</span>
+                      <p class="font-12 line-height-s color-theme opacity-70">2.00 s</p>
                     </div>
                     <div class="col-6">
                       <div class="card card-style m-0 bg-28" data-card-height="140"
                         style="background-image:url('images/fitness/4t.jpg')">
                         <!-- Remove card-top, move result under title -->
                       </div>
-                      <h5 class="font-600 font-16 line-height-sm pt-3">20m Sprint</h5>
-                      <span class="bg-red-dark p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">3.59 s</span>
-                      <p class="font-12 line-height-s">3.59 s</p>
+                      <h5 class="font-600 font-16 line-height-sm pt-3 color-theme">20m Sprint</h5>
+                      <span class="bg-red-dark color-white p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">3.59 s</span>
+                      <p class="font-12 line-height-s color-theme opacity-70">3.59 s</p>
                     </div>
                     <div class="col-12">
                       <div class="divider mt-2 mb-4"></div>
@@ -403,18 +435,18 @@
                         style="background-image:url('images/fitness/11t.jpg')">
                         <!-- Remove card-top, move result under title -->
                       </div>
-                      <h5 class="font-600 font-16 line-height-sm pt-3">Gewandtheit</h5>
+                      <h5 class="font-600 font-16 line-height-sm pt-3 color-theme">Gewandtheit</h5>
                       <span class="bg-gray-light color-black p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">7.81 s</span>
-                      <p class="font-12 line-height-s">7.81 s</p>
+                      <p class="font-12 line-height-s color-theme opacity-70">7.81 s</p>
                     </div>
                     <div class="col-6">
                       <div class="card card-style m-0 bg-28" data-card-height="140"
                         style="background-image:url('images/fitness/10t.jpg')">
                         <!-- Remove card-top, move result under title -->
                       </div>
-                      <h5 class="font-600 font-16 line-height-sm pt-3">Ballkontrolle</h5>
-                      <span class="bg-teal-dark p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">10.82 s</span>
-                      <p class="font-12 line-height-s">10.82 s</p>
+                      <h5 class="font-600 font-16 line-height-sm pt-3 color-theme">Ballkontrolle</h5>
+                      <span class="bg-teal-dark color-white p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">10.82 s</span>
+                      <p class="font-12 line-height-s color-theme opacity-70">10.82 s</p>
                     </div>
                     <div class="col-12">
                       <div class="divider mt-2 mb-4"></div>
@@ -424,18 +456,18 @@
                         style="background-image:url('images/fitness/6t.jpg')">
                         <!-- Remove card-top, move result under title -->
                       </div>
-                      <h5 class="font-600 font-16 line-height-sm pt-3">Balljonglieren</h5>
-                      <span class="bg-blue-dark p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">0.00 P</span>
-                      <p class="font-12 line-height-s">0.00 P</p>
+                      <h5 class="font-600 font-16 line-height-sm pt-3 color-theme">Balljonglieren</h5>
+                      <span class="bg-blue-dark color-white p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">0.00 P</span>
+                      <p class="font-12 line-height-s color-theme opacity-70">0.00 P</p>
                     </div>
                     <div class="col-6">
                       <div class="card card-style m-0 bg-28" data-card-height="140"
                         style="background-image:url('images/fitness/7t.jpg')">
                         <!-- Remove card-top, move result under title -->
                       </div>
-                      <h5 class="font-600 font-16 line-height-sm pt-3">Dribbling</h5>
-                      <span class="bg-green-dark p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">10.27 s</span>
-                      <p class="font-12 line-height-s">10.27 s</p>
+                      <h5 class="font-600 font-16 line-height-sm pt-3 color-theme">Dribbling</h5>
+                      <span class="bg-green-dark color-white p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">10.27 s</span>
+                      <p class="font-12 line-height-s color-theme opacity-70">10.27 s</p>
                     </div>
                   </div>
                 </div>
@@ -669,6 +701,24 @@
           height: 100%;
           object-fit: cover;
           aspect-ratio: 9/16;
+        }
+
+        /* Date Overlay on Video */
+        .card-date-overlay {
+          position: absolute;
+          top: 20px;
+          left: 0;
+          width: 100%;
+          text-align: center;
+          z-index: 5; /* Ensure it's on top of the loading spinner and gradient overlay */
+          pointer-events: none; /* Allows clicks to go through to the video */
+        }
+
+        .video-date {
+          font-size: 28px; /* Large font as requested */
+          font-weight: 700;
+          color: #FFFFFF;
+          text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Improves readability */
         }
 
         /* Fix card bottom spacing */
