--- a/page-videos.html
+++ b/page-videos.html
@@ -314,7 +314,7 @@
                     <div class="w-100 me-3">
                       <div class="card card-style m-0 video-thumbnail-container" data-card-height="110" style="position: relative; overflow: hidden;">
                         <video class="thumbnail-video" muted loop preload="metadata"
-                          poster="images/thumbnails/DJI_20250511155856_0068_D.jpg" style="
+                          poster="images/thumbnails/DJI_20250511155856_0068_D.mp4" style="
                           width: 100%;
                           height: 100%;
                           object-fit: cover;
@@ -710,21 +710,26 @@
           left: 0;
           width: 100%;
           text-align: center;
-          z-index: 5; /* Ensure it's on top of the loading spinner and gradient overlay */
-          pointer-events: none; /* Allows clicks to go through to the video */
+          z-index: 5;
+          pointer-events: none;
         }
 
         .video-date {
-          font-size: 28px; /* Large font as requested */
+          font-size: 28px;
           font-weight: 700;
           color: #FFFFFF;
-          text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Improves readability */
+          text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
 
-        /* Fix card bottom spacing */
+        /* Fix card bottom spacing AND LOCK IT IN PLACE */
         .card-bottom {
+          position: absolute !important;
+          bottom: 0 !important;
+          left: 0 !important;
+          right: 0 !important;
           padding-bottom: 10px !important;
           margin-bottom: 0 !important;
+          z-index: 4 !important;
         }
 
         /* Fix card styling to remove extra padding */
