--- a/page-videos.html
+++ b/page-videos.html
@@ -28,6 +28,16 @@
     <div class="spinner-border color-highlight" role="status"></div>
   </div>
   <div id="page">
+    <div class="header header-fixed header-logo-center">
+             <a href="index.html" class="header-title" style="font-weight: 900; font-size: 1.4em;">VIDEOS</a>
+      <a href="#" data-back-button class="header-icon header-icon-1"
+        ><i class="fas fa-arrow-left"></i
+      ></a>
+      <a href="#" data-toggle-theme class="header-icon header-icon-4"
+        ><i class="fas fa-lightbulb"></i
+      ></a>
+    </div>
+
     <div id="footer-bar" class="footer-bar-1">
       <a href="page-Vergleich.html"><i class="fa fa-chart-bar"></i><span>Vergleich</span></a>
       <a href="page-profile-finley.html"><i class="fa fa-futbol"></i><span>Training</span></a>
@@ -35,7 +45,7 @@
       <a href="page-videos.html" class="active-nav"><i class="fa fa-video"></i><span>Videos</span></a>
       <a href="#" data-menu="menu-settings"><i class="fa fa-cog"></i><span>Settings</span></a>
     </div>
-    <div class="page-content">
+    <div class="page-content" style="padding-top: 80px;">
       <!-- Main Content Card -->
       <div class="page-content header-clear-small">
         <div class="content mt-n1">
