--- a/page-Vergleich.html
+++ b/page-Vergleich.html
@@ -27,7 +27,9 @@
 
     <div id="page">
       <div class="header header-fixed header-logo-center">
-        <a href="index.html" class="header-title">Sticky Mobile</a>
+        <a href="index.html" class="header-title" style="font-weight: 900; font-size: 1.4em"
+          >VERGLEICH</a
+        >
         <a href="#" data-back-button class="header-icon header-icon-1"
           ><i class="fas fa-arrow-left"></i
         ></a>
@@ -46,7 +48,7 @@
         <a href="#" data-menu="menu-settings"><i class="fa fa-cog"></i><span>Settings</span></a>
       </div>
 
-      <div class="page-content header-clear-medium">
+      <div class="page-content header-clear-medium" style="padding-top: 80px">
         <div
           class="card card-style preload-img"
           data-src="images/pictures/18w.jpg"
