feat: add average time display to game overlay and adjust layout for improved user experience

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i|Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link href="fonts/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
   <link data-pwa-version="set_in_manifest_and_pwa_js" href="manifest.json" rel="manifest">
+  <!-- Favicon -->
+  <link href="app/icons/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="app/icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="app/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+  <link href="app/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+
+  <!-- Apple Touch Icon -->
   <link href="app/icons/icon-192x192.png" rel="apple-touch-icon" sizes="192x192">
   <meta content="#1b1d21" media="(prefers-color-scheme: light)" name="theme-color">
   <meta content="#1b1d21" media="(prefers-color-scheme: dark)" name="theme-color">
