--- a/page-videos.html
+++ b/page-videos.html
@@ -17,6 +17,14 @@
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">
   <link rel="manifest" href="manifest.json" data-pwa-version="set_in_manifest_and_pwa_js">
+
+  <!-- Favicon -->
+  <link href="app/icons/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="app/icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="app/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+  <link href="app/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+
+  <!-- Apple Touch Icon -->
   <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png">
 
   <!-- DNS prefetch for video CDN -->
