--- a/page-Vergleich.html
+++ b/page-Vergleich.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover"
     />
-    <title>StickyMobile BootStrap</title>
+    <title>Finley</title>
     <link rel="stylesheet" type="text/css" href="styles/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <link
@@ -17,6 +17,14 @@
     />
     <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css" />
     <link rel="manifest" href="manifest.json" data-pwa-version="set_in_manifest_and_pwa_js" />
+
+    <!-- Favicon -->
+    <link href="app/icons/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="app/icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="app/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+    <link href="app/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+
+    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png" />
   </head>
 
